--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
       <h1>Miniatures Gallery</h1>
     </header>
     <main>
-      <div class="carousel"></div>
+      <div class="carousel">
+        <div class="card prev-deck">Card 1</div>
+        <div class="card first">Card 2</div>
+        <div class="card second focus">Card 3</div>
+        <div class="card third">Card 4</div>
+        <div class="card next-deck">Card 5</div>
+      </div>
       <button class="nav-btn" id="left-arrow">
         <i class="fas fa-chevron-circle-left"></i>
       </button>
