added feature nav dots

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       <button class="nav-btn" id="right-arrow">
         <i class="fas fa-chevron-circle-right"></i>
       </button>
+      <section class="nav-dots-container">
+        <!-- <div class="nav-dot"></div>
+        <div class="nav-dot"></div>
+        <div class="nav-dot"></div> -->
+      </section>
     </main>
     <script src="./app.js"></script>
   </body>
