--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./icons/gallery_icon.png" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Pacifico&display=swap"
+      href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@600&family=Poppins:wght@300;500&display=swap"
       rel="stylesheet"
     />
     <link
@@ -29,11 +29,7 @@
       <button class="nav-btn" id="right-arrow">
         <i class="fas fa-chevron-circle-right"></i>
       </button>
-      <section class="nav-dots-container">
-        <!-- <div class="nav-dot"></div>
-        <div class="nav-dot"></div>
-        <div class="nav-dot"></div> -->
-      </section>
+      <section class="nav-dots-container"></section>
     </main>
     <script src="./app.js"></script>
   </body>
